InternexDev_Sandbox/src/objects/Pricing__c.object
<CustomObject>
    <fields>
        <fullName>Business_Transaction_Date__c</fullName>
        <label>Business Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Index_Uniqueness__c</fullName>
        <description>Created for avoiding the Duplicate entry</description>
        <label>Date Index Uniqueness</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Date_Index__c</fullName>
        <description>Created for avoiding the Duplicate entry</description>
        <formula>TEXT( Date__c )&amp;&apos;-&apos;&amp; TEXT( Index__c )</formula>
        <label>Date Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <picklist>
            <picklistValues>
                <fullName>Citi Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internex base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIBOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WS Prime</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MP_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>MP External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>MONTH( Date__c )</formula>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portal_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Portal External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_with_Grade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Grade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_with_Market_Place__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Market Place</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_with_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>YEAR( Date__c )</formula>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Pricing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Index__c</columns>
        <columns>Rate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>External_Id__c</columns>
        <columns>Business_Transaction_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Pricing-{00000}</displayFormat>
        <label>Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Date_Validation_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>Date__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>Date should be less than or equal to Today</errorMessage>
    </validationRules>
</CustomObject>